# hackathon

./: .gitignore
particle_life_c/: CMakeLists.txt  main.c
particle_life_python/: Particles.py  main.py  main_gui.py  main_plot.py
